--- a/app/views/paste/nuevo.phtml
+++ b/app/views/paste/nuevo.phtml
@@ -9,6 +9,7 @@ echo '<br/>'.textarea_tag('paste.post');
 
 echo '<br/><label for = paste[expiracion] > Borrar despues de: </label>'.select_tag('paste[expiracion]',array("n" => "Nunca", "m" => "10 Minutos","h" => "1 Hora","d" => "1 Dia","e" => "1 Mes"), 'selected: ');
 echo '<label for = paste[syntax] > Sintaxis: </label>'.select_tag('paste[syntax]',array("Plain" => "Seleccione...", "Php" => "php", "Plain" => "text","Sql" => "sql", "Xml" => "xml","Css" => "css","Xml" => "html","JScript" => "javascript"));
+echo '<label for = paste[micaptcha]> Cuanto es 4 + dos:</label>'.text_field_tag('paste.micaptcha');
 
 echo submit_tag('Enviar');
 echo end_form_tag();
